--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
 					FAQ
 				</div>
 			</div>
+			<div class="row ack">
+				<div class="span12">
+					<h2> Acknowledgments</h2>
+					<p> Balaji </p>
+					<p> Wendy Ivanov, Albert Scarasso, and Yimeng Lu </p>
+				</div>
+			</div>
 			<div class="row footer">
 				<div class="span12">
 					Footer
