--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 			</div>
 			<div class="row ack">
 				<div class="span12">
-					<h2> Acknowledgments</h2>
-					<p> Balaji </p>
-					<p> Wendy Ivanov, Albert Scarasso, and Yimeng Lu </p>
+					<h3> Acknowledgments</h3>
+					<p> Balaji S. Srinivasan and Vijay S. Pande (Coursera) </p>
+					<p> Wendy Ivanov, Albert Scarasso, and Yimeng Lu (Investors) </p>
 				</div>
 			</div>
 			<div class="row footer">
