Added some content

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 			</div>
 			<div class="row heading">
 				<div class="span12">
-					<h1>Bitstarter Title</h1>
+					<h1>BoldStarter</h1>
 				</div>
 			</div>
 			<div class="row subheading">
 				<div class="span12">
-					<p class="lead">This is my first bitstarter project.</p>
+					<p class="lead">Crowdfunding site for those who dare to act on their dreams</p>
 				</div>
 			</div>
 			<div class="row pitch">
@@ -100,7 +100,7 @@
 			</div>
 			<div class="row footer">
 				<div class="span12">
-					Footer
+					<p>Born you were not to live like brutes, but to follow knowledge and virtue. [Dante]</p>
 				</div>
 			</div>
 		</div>
