--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 			<div class="row subheading">
 				<div class="span12">
 					<p class="lead">Crowdfunding site for those who dare to act on their dreams</p>
+					<p>(under construction)</p>
 				</div>
 			</div>
 			<div class="row pitch">
@@ -95,7 +96,7 @@
 				<div class="span12">
 					<h3> Acknowledgments</h3>
 					<p> Balaji S. Srinivasan and Vijay S. Pande (Coursera) </p>
-					<p> Wendy Ivanov, Albert Scarasso, and Yimeng Lu (Investors) </p>
+					<p> Wendy Ivanov, Albert Scarasso, and Yimeng Lu (Early investors) </p>
 				</div>
 			</div>
 			<div class="row footer">
