--- a/index.html
+++ b/index.html
@@ -90,11 +90,15 @@
 			<div class="row faq">
 				<div class="span12">
 					FAQ
+					<list>
+						<li>How can we do this?</li>
+						<li>How can we do that?</li>
+					</list>
 				</div>
 			</div>
 			<div class="row ack">
 				<div class="span12">
-					<h3> Acknowledgments</h3>
+					<h4> Acknowledgments</h4>
 					<p> Balaji S. Srinivasan and Vijay S. Pande (Coursera) </p>
 					<p> Wendy Ivanov, Albert Scarasso, and Yimeng Lu (Early investors) </p>
 				</div>
