--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			</div>
 			<div class="row pitch">
 				<div class="span6 video">
-					<img src="./video.jpg" alt="Video"/>
+					Video
 				</div>
 				<div class="span6">
 					<div class="thermometer">
