--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title>BoldStarter</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
-    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">    
-    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
-    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
-    <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
-          rel="stylesheet" type="text/css">
+    <meta content="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <title>SkyCalc Crowdfunding Site</title>
+
+    <link rel="stylesheet" type="text/css" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css"/>
+    <!--link rel="stylesheet" type="text/css" href="css/zengarden-style.css"/-->
+    <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css"/>
+    <link rel="stylesheet" type="text/css" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css"/>    
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic"/>
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800"/>
+
+    <script type="text/javascript" src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
+    <script type="text/javascript" src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
+
     <style type="text/css">
 
       /* Large desktop */
@@ -43,7 +47,7 @@
       /* All form factors */
 
       /* Main body and headings */
-      body{
+      body {
         font-family: 'Open Sans', Helvetica, Arial, sans-serif;
       }
       .heading, .subheading {
@@ -68,7 +72,7 @@
         padding: 2% 0%;
       }
       .actions {
-        background-color: #343434;
+        background-color: #6699FF;
         padding: 3% 0%;
       }
       .video, .thermometer, .order, .social, .statistics {
@@ -76,6 +80,17 @@
       }
       .statistics h3, .statistics p {
         color: white;
+      }
+
+      /* Progress bar color override */
+      .progress-success .bar, .progress .bar-success {
+        background-color: #2941B9;
+        background-image: -moz-linear-gradient(top, #2941B9, #0921B9);
+        background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#2941B9), to(#0921B9));
+        background-image: -webkit-linear-gradient(top, #2941B9, #0921B9);
+        background-image: -o-linear-gradient(top, #2941B9, #0921B9);
+        background-image: linear-gradient(to bottom, #2941B9, #0921B9);
+        background-repeat: repeat-x;
       }
 
       /* Marketing Copy and Footer */
@@ -88,26 +103,24 @@
         padding: 2.5% 0%;
       }
       .footer {
-        color: #cccccc;
+        color: #CCCCCC;
         text-align: center;
       }
       .footer p {
         font-size: 11px;
       }
       .footer a {
-        color: #ccccff;
+        color: #CCCCCC;
       }
     </style>
   </head>
-  <body>
-
+  <body style="background-color:#BBDDFF">
     <!-- Mobile-friendly navbar adapted from example. -->
     <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <button type="button" class="btn btn-navbar"
-                  data-toggle="collapse" data-target=".nav-collapse">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -133,19 +146,20 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>SkyCalc</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">The cloud spreadsheet for programming in the cloud.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="img/video.jpg" alt="img" />
+          <!--img class="img-polaroid" src="http://placehold.it/480x270" alt="img" /-->
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -157,17 +171,17 @@
                 different in horizontal and vertical layouts, illustrating
                 media queries. -->
                 <div class="linediv-l">
-                <h3>1000</h3> <p>backers</p>
+                <h3>1024</h3> <p>backers</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$6000</h3> <p>of $10,000</p>
+                  <h3>$4,096</h3> <p>of $10,000</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-r">
-                <h3>10</h3> <p>days left</p>
+                <h3>16</h3> <p>days left</p>
                 </div>
               </div>
             </div>
@@ -176,14 +190,14 @@
             <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
             <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 60%;"></div>
-              <div class="bar bar-warning" style="width: 40%;"></div>
+              <div class="bar bar-success" style="width: 40.96%;"></div>
+              <div class="bar bar-warning" style="width: 59.04%;"></div>
             </div>
           </div>
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <button class="btn btn-primary btn-large">Preorder</button>
           </div>
           <div class="span8 offset2 social">
             <!-- Social buttons are not included in default Bootstrap. -->
@@ -200,21 +214,24 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="img/ss-01.png" alt="img" />
         </div>
-        <div class="span5 copy">
+        <div class="span6 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+            SkyCalc brings together the ease of use of spreadsheets and the power of programming
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
           </p>
         </div>
       </div>
@@ -222,21 +239,24 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+            At the core, the technology consists of
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
+            blah blah blah blah blah blah blah blah blah
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="img/ss-02.png" alt="img" />
         </div>
       </div>
 
@@ -285,8 +305,7 @@
           <p>This work is licensed under
             the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
               By-SA 3.0
-            </a>, without all the cruft that would otherwise be
-            put at the bottom of the page.</p>
+            </a>, without all the cruft that would otherwise be put at the bottom of the page.</p>
         </div>
       </div>
     </div>
