added/edited content

--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic"/>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800"/>
     <link rel="stylesheet" type="text/css" href="https://s3-us-west-2.amazonaws.com/lakebolt/bitstarter/skycalc.css"/>
+    <!--link rel="stylesheet" type="text/css" href="css/skycalc.css"/-->
 
     <script type="text/javascript" src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
     <script type="text/javascript" src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
 
+    <style>
+    </style>
 </head>
 
-<body style="background-color:#BBDDFF">
+<body>
 
     <!-- Mobile-friendly navbar adapted from example. -->
     <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
@@ -152,9 +155,9 @@
                     </div>
                     <div id="features-beginner" class="accordion-body collapse">
                         <div class="accordion-inner">
-                            SkyCalc is a great way to learn spreadsheet modeling while getting introduced to general programming.
-                            Novice users quickly become able to do things like:<br />
-                            - Edit formulas as usually done with spreadsheets<br />
+                            SkyCalc is a great way to build spreadsheets, while acquiring basic programming skills.
+                            Novice users quickly learn to do things like:<br />
+                            - Create worksheets, edit formulas, add/remove rows and columns, etc.<br />
                             - Reuse spreadsheet templates to build non-trivial models<br />
                             - Drag and drop worksheets and other components from a palette of variable widgets<br />
                             - Organize worksheets and other components in different tab panels, for better visualization<br />
@@ -184,12 +187,12 @@
                     </div>
                     <div id="features-advanced" class="accordion-body collapse">
                         <div class="accordion-inner">
-                            SkyCalc supports advanced computing techniques, like:<br />
-                            - Data abstraction: ability to define new types and use them with the same ease as native ones<br />
-                            - Procedural and functional abstractions, including higher order functional programming<br />
-                            - Interprocess communication, via channels to allow SkyCalc instances to communicate with each other<br />
-                            - High Performance Computing, by deploying multiple SkyCalc instances in a cluster<br />
-                            - Monte Carlo simulations, using various stochastic distributions<br />
+                            SkyCalc has a lot to offer to expert users:<br />
+                            - Higher order functional programming<br />
+                            - Data abstraction: users can define new types along with their operations<br />
+                            - Monte Carlo simulations powered by various stochastic distributions<br />
+                            - Interprocess communication: channels allow SkyCalc instances to communicate with each other<br />
+                            - High Performance Computing: multiple SkyCalc instances can be deployed on a cluster<br />
                         </div>
                     </div>
                 </div>
@@ -223,7 +226,7 @@
                         <div id="collapseOne" class="accordion-body collapse">
                             <div class="accordion-inner">
                                 <strong>In short, yes!</strong> No spreadsheet product out there, in the cloud or not
-                                , combines spreasheet modeling and general computing like SkyCals does.
+                                , combines spreasheet modeling and general computing as well as SkyCals does.
                             </div>
                         </div>
                     </div>
@@ -247,7 +250,7 @@
         <!-- Not crucial, but we put this under a CC By-SA 3.0 license. -->
         <!-- http://creativecommons.org/licenses/ -->
         <div class="row-fluid footer">
-            <div class="span12">
+            <div class="span10 offset1">
                 <p>
                 This work is licensed under the
                 <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0 </a>
