--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <div class="row-fluid pitch">
             <div class="span6 video">
-                <iframe width="400" height="284" frameborder=1 src="http://www.youtube.com/embed/FeieYrW52Eg">
+                <iframe width="400" height="254" frameborder=1 src="http://www.youtube.com/embed/FeieYrW52Eg">
                 </iframe>
             </div>
 
@@ -118,20 +118,17 @@
                 <div class="span6 offset3 order">
                     <button class="btn btn-primary btn-large">Support</button>
                 </div>
-
-                <!-- Social buttons are not included in default Bootstrap. -->
-                <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-                <div class="span8 offset2 social">
-                    <!--
-                    <list>
-                        <li><button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button></li>
-                        <li><button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button></li>
-                        <li><button class="btn btn-linkedin"><i class="icon-linkedin"></i> | LinkedIn</button></li>
-                        <li><button class="btn btn-google-plus"><i class="icon-google-plus"></i> | Google+</button></li>
-                    </list>
-                    -->
-                </div>
             </div>
+        </div>
+
+        <!-- Social buttons are not included in default Bootstrap. -->
+        <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
+        <div class="span8 offset2 social">
+            <p>Share us on:</p>
+            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+            <button class="btn btn-linkedin"><i class="icon-linkedin"></i> | LinkedIn</button>
+            <button class="btn btn-google-plus"><i class="icon-google-plus"></i> | Google+</button>
         </div>
 
         <!-- Beyond this part the marketing copy begins. -->
@@ -201,12 +198,11 @@
 
         <div class="row-fluid snapshots">
             <div class="span6 asset">
-                <img class="img-polaroid" src="http://i.imgur.com/xQ1zLOb.png" alt="img" />
                 <!--img class="img-polaroid" src="http://placehold.it/480x270" alt="img" /-->
+                <img class="img-polaroid" src="http://i.imgur.com/xQ1zLOb.png" alt="img" />
             </div>
             <div class="span6 asset">
                 <img class="img-polaroid" src="http://i.imgur.com/dZZAKAZ.png" alt="img" />
-                <!--img class="img-polaroid" src="http://placehold.it/480x270" alt="img" /-->
             </div>
         </div>
 
