--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
         <div class="row-fluid snapshots">
             <div class="span6 asset">
                 <!--img class="img-polaroid" src="http://placehold.it/480x270" alt="img" /-->
-                <img class="img-polaroid" src="http://i.imgur.com/xQ1zLOb.png" alt="img" />
+                <img src="http://i.imgur.com/vWlAZBS.png" alt="img" />
             </div>
             <div class="span6 asset">
-                <img class="img-polaroid" src="http://i.imgur.com/dZZAKAZ.png" alt="img" />
+                <img src="http://i.imgur.com/acKrdaU.png" alt="img" />
             </div>
         </div>
 
