--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <!-- Social buttons are not included in default Bootstrap. -->
         <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
         <div class="span8 offset2 social">
-            <p>Share us on:</p>
+            <p>Please share us on:</p>
             <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
             <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
             <button class="btn btn-linkedin"><i class="icon-linkedin"></i> | LinkedIn</button>
