Edited FAQ items

--- a/index.html
+++ b/index.html
@@ -221,18 +221,32 @@
                         </div>
                         <div id="collapseOne" class="accordion-body collapse">
                             <div class="accordion-inner">
-                                <strong>In short, yes!</strong> No spreadsheet product out there, in the cloud or not
-                                , combines spreasheet modeling and general computing as well as SkyCals does.
+                                <strong>Yes!</strong>
+                                Because SkyCalc is much more than a spreadsheet.
+                                SkyCalc is a complete programming environment in the cloud.
+                                Nothing combines spreasheet modeling and general computing as well as SkyCals does.
                             </div>
                         </div>
                     </div>
                     <div class="accordion-group">
                         <div class="accordion-heading">
                             <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-                                When will SkyCalc be ready?
+                                Is SkyCalc offered only as a web-based product?
                             </a>
                         </div>
                         <div id="collapseTwo" class="accordion-body collapse">
+                            <div class="accordion-inner">
+                                No. SkyCalc can also be licensed for private clouds as well as a standalone product.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-group">
+                        <div class="accordion-heading">
+                            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
+                                When will SkyCalc be ready?
+                            </a>
+                        </div>
+                        <div id="collapseThree" class="accordion-body collapse">
                             <div class="accordion-inner">
                                 We are targeting the first quarter of 2014 for our first release.
                                 Currently there are a handful of Beta customers using our bare bones API, with ho GUI.
