--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                         </div>
                         <div id="collapseThree" class="accordion-body collapse">
                             <div class="accordion-inner">
-                                We are targeting the first quarter of 2014 for our first release.
+                                We are targeting Q1 2014 for our first release.
                                 Currently there are a handful of Beta customers using our bare bones API, with ho GUI.
                             </div>
                         </div>
