--- a/index.html
+++ b/index.html
@@ -118,19 +118,25 @@
                 <div class="span6 offset3 order">
                     <button class="btn btn-primary btn-large">Support</button>
                 </div>
+                <div class="span10 offset3 social">
+                    <!-- AddThis Button BEGIN -->
+                    <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+                        <a class="addthis_button_preferred_1"></a>
+                        <a class="addthis_button_preferred_2"></a>
+                        <a class="addthis_button_preferred_3"></a>
+                        <a class="addthis_button_compact"></a>
+                        <a class="addthis_counter addthis_bubble_style"></a>
+                    </div>
+                    <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+                    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52020e50683f64d3"></script>
+                    <!-- AddThis Button END -->
+                    </div>
+                </div>
             </div>
         </div>
 
         <!-- Social buttons are not included in default Bootstrap. -->
         <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-        <div class="span8 offset2 social">
-            <p>Please share us on:</p>
-            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
-            <button class="btn btn-linkedin"><i class="icon-linkedin"></i> | LinkedIn</button>
-            <button class="btn btn-google-plus"><i class="icon-google-plus"></i> | Google+</button>
-        </div>
-
         <!-- Beyond this part the marketing copy begins. -->
         <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
         <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
