Enhancements to social section

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <div class="row-fluid pitch">
             <div class="span6 video">
-                <iframe width="400" height="254" frameborder=1 src="http://www.youtube.com/embed/FeieYrW52Eg">
+                <iframe width="400" height="320" frameborder=1 src="http://www.youtube.com/embed/FeieYrW52Eg">
                 </iframe>
             </div>
 
@@ -116,21 +116,20 @@
                 <!-- Standard Bootstrap button. -->
                 <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
                 <div class="span6 offset3 order">
-                    <button class="btn btn-primary btn-large">Support</button>
+                    <button class="btn btn-primary btn-large">Support SkyCalc!</button>
                 </div>
-                <div class="span10 offset3 social">
+                <div class="span12 social statistics">
+                    <p>and please share us on:</p>
                     <!-- AddThis Button BEGIN -->
-                    <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
-                        <a class="addthis_button_preferred_1"></a>
-                        <a class="addthis_button_preferred_2"></a>
-                        <a class="addthis_button_preferred_3"></a>
-                        <a class="addthis_button_compact"></a>
-                        <a class="addthis_counter addthis_bubble_style"></a>
+                    <div class="offset4 addthis_toolbox addthis_default_style addthis_32x32_style">
+                        <a class="addthis_button_facebook"></a>
+                        <a class="addthis_button_twitter"></a>
+                        <a class="addthis_button_google_plusone_share"></a>
+                        <a class="addthis_button_linkedin"></a>
                     </div>
                     <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
                     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52020e50683f64d3"></script>
                     <!-- AddThis Button END -->
-                    </div>
                 </div>
             </div>
         </div>
