--- a/index.html
+++ b/index.html
@@ -201,12 +201,12 @@
             </div>
         </div>
 
-        <div class="row-fluid snapshots">
-            <div class="span6 asset">
+        <div class="span10 offset1 row-fluid snapshots">
+            <div class="span5 asset">
                 <!--img class="img-polaroid" src="http://placehold.it/480x270" alt="img" /-->
                 <img src="http://i.imgur.com/vWlAZBS.png" alt="img" />
             </div>
-            <div class="span6 asset">
+            <div class="span5 asset">
                 <img src="http://i.imgur.com/acKrdaU.png" alt="img" />
             </div>
         </div>
