--- a/index.html
+++ b/index.html
@@ -116,8 +116,17 @@
                 <!-- Standard Bootstrap button. -->
                 <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
                 <div class="span6 offset3 order">
-                    <button class="btn btn-primary btn-large">Support SkyCalc!</button>
+                    <!--button class="btn btn-primary btn-large">Support SkyCalc!</button-->
+<a class="coinbase-button" data-code="e62eaba341819f73a4fc706bdd3cebba" data-button-style="custom_large" href="https://coinbase.com/checkouts/e62eaba341819f73a4fc706bdd3cebba">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+                    <!--a class="coinbase-button"
+                        data-button-style="custom_large"
+                        data-button-text="Back with Bitcoins"
+                        data-code="6f8553d24341bb455e566a292a021c97"
+                        href="https://coinbase.com/checkouts/6f8553d24341bb455e566a292a021c97">Back with Bitcoins</a>
+                    <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script-->
                 </div>
+
+
                 <div class="span12 social statistics">
                     <p>and please share us on:</p>
                     <!-- AddThis Button BEGIN -->
@@ -276,6 +285,17 @@
         <!-- OK, we are done with the container -->
 
     </div>
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-43037679-3', 'boltstarter.com');
+        ga('send', 'pageview');
+
+    </script>
 
 </body>
 </html>
