--- a/index.html
+++ b/index.html
@@ -114,16 +114,14 @@
                 </div>
 
                 <!-- Standard Bootstrap button. -->
+                <!--btn btn-primary btn-large-->
                 <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
                 <div class="span6 offset3 order">
-                    <!--button class="btn btn-primary btn-large">Support SkyCalc!</button-->
-<a class="coinbase-button" data-code="e62eaba341819f73a4fc706bdd3cebba" data-button-style="custom_large" href="https://coinbase.com/checkouts/e62eaba341819f73a4fc706bdd3cebba">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
-                    <!--a class="coinbase-button"
+                    <a class="coinbase-button"
+                        data-code="e62eaba341819f73a4fc706bdd3cebba"
                         data-button-style="custom_large"
-                        data-button-text="Back with Bitcoins"
-                        data-code="6f8553d24341bb455e566a292a021c97"
-                        href="https://coinbase.com/checkouts/6f8553d24341bb455e566a292a021c97">Back with Bitcoins</a>
-                    <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script-->
+                        href="https://coinbase.com/checkouts/e62eaba341819f73a4fc706bdd3cebba">Donate Bitcoins</a>
+                    <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
                 </div>
 
 
