--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                                 <strong>Yes!</strong>
                                 Because SkyCalc is much more than a spreadsheet.
                                 SkyCalc is a complete programming environment in the cloud.
-                                Nothing combines spreasheet modeling and general computing as well as SkyCals does.
+                                Nothing combines spreadsheet modeling and general computing as well as SkyCals does.
                             </div>
                         </div>
                     </div>
