--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="/orders">Orders</a></li>
                         <li><a href="#contact">Contact</a></li>
-                        <li><a href="#test">Test</a></li>
+                        <li><a href="#test0">Test 0</a></li>
+                        <li><a href="#test1">Test 1</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
