--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="/orders">Orders</a></li>
                         <li><a href="#contact">Contact</a></li>
-                        <li><a href="#test">Test X</a></li>
+                        <li><a href="#test">Test Y</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
