--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                         <div id="collapseThree" class="accordion-body collapse">
                             <div class="accordion-inner">
                                 We are targeting Q1 2014 for our first release.
-                                Currently there are a handful of Beta customers using our bare bones API, with ho GUI.
+                                Currently there are a handful of Beta customers using our bare bones API, with no GUI.
                             </div>
                         </div>
                     </div>
