--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 </h3>
                 <p>
                     SkyCalc blends spreadsheet modeling and general programming in a coherent and intuitive framework. 
-                    The result is an incredibly powerful productivity app with a lot to offer to different users:
+                    The result is a powerful productivity app with a lot to offer to different users:
                 </p>
                 <div class="accordion" id="accordion-pts">
                 <div class="accordion-group">
@@ -207,7 +207,7 @@
                     </div>
                     <div id="features-advanced" class="accordion-body collapse">
                         <div class="accordion-inner">
-                            SkyCalc has a lot to offer to expert users:<br />
+                            SkyCalc offering to expert users shines in comparison to traditional spreasheets:<br />
                             - Higher order functional programming<br />
                             - Data abstraction: users can define new types along with their operations<br />
                             - Monte Carlo simulations powered by various stochastic distributions<br />
