--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><title>Lakebolt&nbspResearch</title>
 	<link rel="stylesheet" media="screen" type="text/css" href="g/a.css" />
-	<script type="text/javascript" src="g/mootools.js"></script><script type="text/javascript" src="g/core.js"></script>
+	<script type="text/javascript" src="http://www.skycalc.com/g/mootools.js"></script><script type="text/javascript" src="g/core.js"></script>
 </head>
 <body>
 	<div id="cont">
@@ -25,7 +25,7 @@
 	</div>
 	<div id="bg">
 		<div>
-			<table cellpadding="0" cellspacing="0"><tr><td><img alt="" src="rdc.jpg" /></td></tr></table>
+			<table cellpadding="0" cellspacing="0"><tr><td><img alt="" src="http://www.skycalc.com/rdc.jpg" /></td></tr></table>
 		</div>
 	</div>
 	<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
