--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         </div>
                         <div id="collapseTwo" class="accordion-body collapse">
                             <div class="accordion-inner">
-                                No. SkyCalc can also be licensed for private clouds as well as a standalone product.
+                                No. SkyCalc can be licensed for public and private clouds, as well as a standalone product.
                             </div>
                         </div>
                     </div>
