--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	</div>
 	<div id="bg">
 		<div>
-			<table cellpadding="0" cellspacing="0"><tr><td><img alt="" src="rdc.jpg" /></td></tr></table>
+			<table cellpadding="0" cellspacing="0"><tr><td><img alt="img" src="http://i.imgur.com/acKrdaU.png" /></td></tr></table>
 		</div>
 	</div>
 	<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
