--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><title>Lakebolt&nbspResearch</title>
-	<link rel="stylesheet" media="screen" type="text/css" href="a.css" />
+	<link rel="stylesheet" media="screen" type="text/css" href="css/a.css" />
 	<script type="text/javascript" src="g/mootools.js"></script><script type="text/javascript" src="js/core.js"></script>
 </head>
 <body>
