--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ﻿<!doctype html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><title>Lakebolt&nbspResearch</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<title>Lakebolt&nbspResearch</title>
 	<link rel="stylesheet" media="screen" type="text/css" href="a.css" />
 	<script type="text/javascript" src="mootools.js"></script><script type="text/javascript" src="core.js"></script>
 </head>
