--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Lakebolt&nbspResearch</title>
 	<link rel="stylesheet" media="screen" type="text/css" href="a.css" />
-	<script type="text/javascript" src="mootools.js"></script><script type="text/javascript" src="core.js"></script>
+	<!-- <script type="text/javascript" src="mootools.js"></script><script type="text/javascript" src="core.js"></script> -->
 </head>
 <body>
 	<div id="cont">
