--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<div id="cont">
 		<div class="box large left">
 			<h2><b>Lakebolt</b>&nbspResearch</h2>
-			Coming very soon ...
+			Coming very very soon ...
 		</div>
 	</div>
 	<div id="menu">
