--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
                         </div>
                         <div id="collapseThree" class="accordion-body collapse">
                             <div class="accordion-inner">
+                                Currently we are in Beta for our compute API.
                                 We are targeting Q4 2014 for our first release.
-                                Currently there are a handful of Beta customers using our bare bones API, with no GUI.
                             </div>
                         </div>
                     </div>
