--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                         </div>
                         <div id="collapseThree" class="accordion-body collapse">
                             <div class="accordion-inner">
-                                Currently we are in Beta for our compute API.
+                                SkyCalc's compute API is available in Beta.
                                 We are targeting Q4 2014 for our first release.
                             </div>
                         </div>
