--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
                     </div>
                     <div id="features-intermediate" class="accordion-body collapse">
                         <div class="accordion-inner">
-                            SkyCalc offers powerful mechanisms to perform tasks like:<br />
-                            - Define complex data structures, with fields that can hold data as well as formulas<br />
+                            With SkyCalc you can:<br />
+                            - Define complex data structures, with fields that can hold data as well as formulae<br />
                             - Create queries to perform sophisticated analysis on arbitrary data<br />
                             - Define new functions and create reusable components<br />
                         </div>
